--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - "8000:8000"
     depends_on:
       - db
+    volumes:
+      - backend_data:/app/files
   db:
     image: postgres:16
     environment:
@@ -21,3 +23,8 @@ services:
       POSTGRES_DB: postgres
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+volumes:
+  backend_data:
+  postgres_data:
