--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "bcrypt (==4.0.1)",
     "pyjwt (>=2.10.1,<3.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
-    "alembic (>=1.15.2,<2.0.0)"
+    "alembic (>=1.15.2,<2.0.0)",
+    "openai (>=1.72.0,<2.0.0)"
 ]
 
 [tool.poetry]
