--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "fastapi[standard] (>=0.115.11,<0.116.0)",
+    "fastapi[standard] (>=0.115.9,<0.116.0)",
     "sqlalchemy (>=2.0.39,<3.0.0)",
     "passlib[bcrypt] (==1.7.4)",
     "bcrypt (==4.0.1)",
@@ -18,7 +18,8 @@ dependencies = [
     "openai (==1.75.0)",
     "pymupdf (>=1.25.5,<2.0.0)",
     "pillow (>=11.2.1,<12.0.0)",
-    "boto3 (>=1.37.37,<2.0.0)"
+    "boto3 (>=1.37.37,<2.0.0)",
+    "chromadb (>=1.0.7,<2.0.0)"
 ]
 
 [tool.poetry]
