--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,11 +15,12 @@ dependencies = [
     "pyjwt (>=2.10.1,<3.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "alembic (>=1.15.2,<2.0.0)",
-    "openai (==1.75.0)",
+    "openai (>=1.77.0,<2.0.0)",
     "pymupdf (>=1.25.5,<2.0.0)",
     "pillow (>=11.2.1,<12.0.0)",
     "boto3 (>=1.37.37,<2.0.0)",
-    "chromadb (>=1.0.7,<2.0.0)"
+    "chromadb (>=1.0.7,<2.0.0)",
+    "openai-agents (>=0.0.14,<0.0.15)"
 ]
 
 [tool.poetry]
